--- a/video-edit1.html
+++ b/video-edit1.html
@@ -480,10 +480,10 @@
                                     <div class="edit-preview preview-wrap">
                                         <div class="template-box">
                                             <div class="templaete-img template-fit">
-                                                <div class="mockup-img">
+                                                <div class="mockup-img edit1-mockup-img">
                                                     <img class="img-item" src="img/template/iphone-mockup.png" alt="아이폰 목업">
                                                     <!-- 제목, 선택한 레이아웃 비율, 자막 컨텐츠 -->
-                                                    <div class="mockup-content">
+                                                    <div class="mockup-content edit1-mockup">
                                                         <div class="mock-title mockup-content-item">
                                                             <div class="user-title">로우하이 -- vs -- 큐지</div>
                                                         </div>
@@ -502,17 +502,31 @@
                                                                 <span class="word">여러분!</span>
                                                             </div>
                                                         </div>
+
+                                                        <!-- 워터마크 -->
+                                                        <div class="watermark-img">
+                                                            <img src="img/watermark.svg" alt="워터마크 이미지">
+                                                        </div>
+                                                    </div>
+
+                                                    <!-- 워터마크 제거 버튼 -->
+                                                    <div class="watermark-d-container">
+                                                        <button class="watermark-deleteBtn" type="button">
+                                                            <img class="watermark-d-img" src="img/edit/watermark.svg" alt="워터마크 제거 버튼">
+                                                        </button>
+                                                        <span class="watermark-delete-text">워터마크 제거</span>
                                                     </div>
                                                 </div>
                                             </div>
                                         </div>
-
-                                        <div class="templateBtn-wrap">
-                                            <button type="button" class="templaeteBtn" onclick="window.location.href='projectV-complete.html'">저장하기</button>
-                                        </div>
                                     </div>
                                 </div>
+
+                                <div class="templateBtn-wrap">
+                                    <button type="button" class="templaeteBtn" onclick="window.location.href='projectV-complete.html'">저장하기</button>
+                                </div>
                             </div>
+                            
                         </div>
                     </article>
                     
