--- a/projectV-complete.html
+++ b/projectV-complete.html
@@ -195,7 +195,7 @@
                                             <div class="mockup-img">
                                                 <img class="img-item" src="img/template/iphone-mockup.png" alt="아이폰 목업">
                                                 <!-- 목업 : 제목, 선택한 레이아웃 비율, 자막 컨텐츠 -->
-                                                <div class="mockup-content">
+                                                <div class="mockup-content projectV-mockup">
                                                     <div class="mock-title mockup-content-item">
                                                         <div class="user-title">로우하이 -- vs -- 큐지</div>
                                                     </div>
