--- a/register-form.html
+++ b/register-form.html
@@ -91,7 +91,7 @@
                         </div>
                     </div>
                     <div class="btn_wrap">
-                        <button type="button" class="finishBtn" onclick="location.href='registe-complete.html'">회원가입</button>
+                        <button type="button" class="finishBtn" onclick="location.href='register-complete.html'">회원가입</button>
                     </div>
                 </div>
             </div>
