--- a/video-making.html
+++ b/video-making.html
@@ -258,7 +258,7 @@
                         </div>
 
                         <div class="templateBtn-wrap">
-                            <button type="button" class="templaeteBtn">저장하기</button>
+                            <button type="button" class="templaeteBtn" onclick="window.location.href='video.html'">저장하기</button>
                         </div>
                     </article>
                 </section>
