--- a/projectV-complete.html
+++ b/projectV-complete.html
@@ -223,7 +223,7 @@
                                                     </div>
                                 
                                                     <div class="mock-ratio mockup-content-item mockup-content-video ratio16-item video-container">
-                                                        <video class="user-video video-player" src="img/videos/sample-video.mp4" autoplay muted playsinline loop></video>
+                                                        <video class="user-video video-player" src="img/videos/sample-video.mp4" autoplay muted playsinline loop disableRemotePlayback></video>
                                                         
                                                         <!-- 커스텀 재생/정지 버튼 -->
                                                         <div class="video-play-btn">
